examples/css/swipe_toggle.css
.swipe_Bar{
  margin-bottom: 30px
}

[data-ur-swipe-toggle-component]{
  padding: 10px;
  border: 1px solid #ddd;
  color: #555;
  display: inline-block;
}
[data-ur-swipe-toggle-component='next']{
  float: right;
}
[data-ur-swipe-toggle-component='prev']{
}
[data-ur-swipe-toggle-component] > *{
  display: inline-block
}
.mw_clear_both{
  clear: both;
}
[data-ur-state]{
  color: blue;
  height: inherit;
  line-height: 40px;
  padding: 0 5px;
}
[data-ur-state='active']{
  color: purple;
}
[data-ur-touched="true"]{
  background: green;
}

.imageSwitcher{
  border: 0;
  position: relative;
}
.imageSwitcher > *{
  position: absolute;
  z-index: -1;
  opacity: 0;
}
.imageSwitcher > [data-ur-state="active"]{
  opacity: 1;
}
img{
  width: 150px;
  height: 150px;
}

